kubernetes/k8s-ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vg-hc-store-static-resources-ingress
spec:
  rules:
  - http:
      paths:
      - path: "/api/v1/vg-hc-store/static-resources"
        pathType: Prefix
        backend:
          service:
            name: vg-hc-store-static-resources-service
            port:
              number: 3000
